# Kaulang

./: CMakeLists.txt  README.md  run.bat  test.kau
src/: compiler.cpp  compiler.h  defs.h  environment.cpp  environment.h  expr.cpp  expr.h  grammar.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  tokens.cpp  tokens.h
src/lib/: arena.cpp  arena.h  array.h  map.cpp  map.h  span.h  string.cpp  string.h
